--- a/forms-angular-main/src/app/cadastro/cadastro.component.html
+++ b/forms-angular-main/src/app/cadastro/cadastro.component.html
@@ -5,32 +5,39 @@
     <h3 class="principal__subtitulo">Dados pessoais</h3>
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="nome">Nome Completo</label>
-      <input name="nome" id="nome" class="campo__escrita" ngModel required minlength="3">
-      <div *ngIf="(f.controls['nome']?.invalid && f.controls['nome']?.touched) || f.controls['nome']?.dirty">
-        <span class="erro__texto" *ngIf="f.controls['nome']?.errors?.['required']">O campo de nome é obrigatório</span>
-        <span class="erro__texto" *ngIf="f.controls['nome']?.errors?.['minlength']">O campo de nome deve ter no mínimo 3 caracteres</span>
+      <input name="nome" id="nome" class="campo__escrita" ngModel required minlength="3" #nome="ngModel">
+
+      <div *ngIf="(nome?.invalid && nome?.touched) || nome?.dirty">
+        <app-mensagem>*ngIf="nome?.errors?.['required'] mensagem="O campo de nome é obrigatório"</app-mensagem>
+        <app-mensagem>*ngIf="nome?.errors?.['minlength'] mensagem="O campo de nome deve ter no mínimo 3
+          caracteres"</app-mensagem>
       </div>
     </div>
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="nascimento">Nascimento</label>
-        <input name="nascimento" id="nascimento" type="date" class="campo__escrita" ngModel/>
+        <input name="nascimento" id="nascimento" type="date" class="campo__escrita" ngModel required  #dataNascimento="ngModel"/>
+        <div *ngIf="(dataNascimento?.invalid && dataNascimento?.touched) || dataNascimento?.dirty">
+          <app-mensagem>*ngIf="dataNascimento?.errors?.['required'] mensagem="O campo de dataNascimento é obrigatório"</app-mensagem>
+        </div>
       </div>
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="telefone">Contato</label>
-        <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita" ngModel required pattern="(\(?\d{2}\)?\s?)(\d{5}\-?\d{4})"/>
-        <div *ngIf="(f.controls['telefone']?.invalid && f.controls['telefone']?.touched) || f.controls['telefone']?.dirty">
-          <span class="erro__texto" *ngIf="f.controls['telefone']?.errors?.['required']">O campo de telefone é obrigatório</span>
-          <span class="erro__texto" *ngIf="f.controls['telefone']?.errors?.['pattern']">O campo de telefone está em formato inválido</span>
+        <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita" ngModel
+          required pattern="(\(?\d{2}\)?\s?)(\d{5}\-?\d{4})" #contato="ngModel" />
+        <div *ngIf="(contato?.invalid && contato?.touched) || contato?.dirty">
+          <app-mensagem>*ngIf="contato?.errors?.['required'] mensagem="O campo de contato é obrigatório"</app-mensagem>
+          <app-mensagem>*ngIf="contato?.errors?.['pattern'] mensagem="O contato está em formato inválido"</app-mensagem>
         </div>
       </div>
     </div>
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="email">E-mail</label>
-      <input name="email" id="email" type="email" class="campo__escrita" ngModel required pattern="^[\w-.]+@([\w-]+\.)+[\w-]{2,4}$"/>
-      <div *ngIf="(f.controls['email']?.invalid && f.controls['email']?.touched) || f.controls['email']?.dirty">
-        <span class="erro__texto" *ngIf="f.controls['email']?.errors?.['required']">O campo de email é obrigatório</span>
-        <span class="erro__texto" *ngIf="f.controls['email']?.errors?.['pattern']">O email está em formato inválido</span>
+      <input name="email" id="email" type="email" class="campo__escrita" ngModel required
+        pattern="^[\w-.]+@([\w-]+\.)+[\w-]{2,4}$" #email="ngModel" />
+      <div *ngIf="(email?.invalid && email?.touched) || email?.dirty">
+        <app-mensagem>*ngIf="email?.errors?.['required'] mensagem="O campo de email é obrigatório"</app-mensagem>
+        <app-mensagem>*ngIf="email?.errors?.['pattern'] mensagem="O email está em formato inválido"</app-mensagem>
       </div>
     </div>
 
@@ -39,18 +46,18 @@
 
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="cep">CEP</label>
-      <input name="cep" id="cep" class="campo__escrita" ngModel/>
+      <input name="cep" id="cep" class="campo__escrita" ngModel />
       <div id="erro"></div>
     </div>
 
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="endereco">Endereço</label>
-      <input name="endereco" id="endereco" class="campo__escrita" ngModel/>
+      <input name="endereco" id="endereco" class="campo__escrita" ngModel />
     </div>
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="numero">Numero</label>
-        <input name="numero" id="numero" class="campo__escrita" ngModel/>
+        <input name="numero" id="numero" class="campo__escrita" ngModel />
       </div>
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="complemento">Complemento</label>
@@ -59,12 +66,12 @@
     </div>
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="bairro">Bairro</label>
-      <input name="bairro" id="bairro" class="campo__escrita" ngModel/>
+      <input name="bairro" id="bairro" class="campo__escrita" ngModel />
     </div>
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="cidade">Cidade</label>
-        <input name="cidade" id="cidade" class="campo__escrita" ngModel/>
+        <input name="cidade" id="cidade" class="campo__escrita" ngModel />
       </div>
 
       <div class="formulario__campo">
@@ -103,5 +110,5 @@
 
     </div>
     <button type="submit" class="formulario__botao">Enviar formulário</button>
-    </form>
+  </form>
 </main>
