--- a/forms-angular-main/src/app/cadastro/cadastro.component.html
+++ b/forms-angular-main/src/app/cadastro/cadastro.component.html
@@ -16,9 +16,9 @@
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="nascimento">Nascimento</label>
-        <input name="nascimento" id="nascimento" type="date" class="campo__escrita" ngModel required  #dataNascimento="ngModel"/>
-        <div *ngIf="(dataNascimento?.invalid && dataNascimento?.touched) || dataNascimento?.dirty">
-          <app-mensagem>*ngIf="dataNascimento?.errors?.['required'] mensagem="O campo de dataNascimento é obrigatório"</app-mensagem>
+        <input name="nascimento" id="nascimento" type="date" class="campo__escrita" ngModel required #nascimento="ngModel"/>
+        <div *ngIf="(nascimento?.invalid && nascimento?.touched) || nascimento?.dirty">
+          <app-mensagem>*ngIf="nascimento?.errors?.['required'] mensagem="O campo de Data Nascimento é obrigatório"</app-mensagem>
         </div>
       </div>
       <div class="formulario__campo">
