--- a/forms-angular-main/src/app/cadastro/cadastro.component.html
+++ b/forms-angular-main/src/app/cadastro/cadastro.component.html
@@ -5,20 +5,24 @@
     <h3 class="principal__subtitulo">Dados pessoais</h3>
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="nome">Nome Completo</label>
-      <input name="nome" id="nome" class="campo__escrita" ngModel required minlength="3" #nome="ngModel">
+      <input name="nome" id="nome" class="campo__escrita" ngModel #nome="ngModel" required minlength="3">
 
       <div *ngIf="(nome?.invalid && nome?.touched) || nome?.dirty">
-        <app-mensagem>*ngIf="nome?.errors?.['required'] mensagem="O campo de nome é obrigatório"</app-mensagem>
-        <app-mensagem>*ngIf="nome?.errors?.['minlength'] mensagem="O campo de nome deve ter no mínimo 3
-          caracteres"</app-mensagem>
+        <app-mensagem *ngIf="nome?.errors?.['required']" mensagem="O campo de nome é obrigatório"></app-mensagem>
+        <app-mensagem *ngIf="nome?.errors?.['minlength']"
+          mensagem="O campo de nome deve ter no mínimo 3 caracteres"></app-mensagem>
       </div>
     </div>
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="nascimento">Nascimento</label>
-        <input name="nascimento" id="nascimento" type="date" class="campo__escrita" ngModel required #nascimento="ngModel"/>
+        <input name="nascimento" id="nascimento" type="date" class="campo__escrita" ngModel required maiorIdadeValidator
+          #nascimento="ngModel" />
         <div *ngIf="(nascimento?.invalid && nascimento?.touched) || nascimento?.dirty">
-          <app-mensagem>*ngIf="nascimento?.errors?.['required'] mensagem="O campo de Data Nascimento é obrigatório"</app-mensagem>
+          <app-mensagem *ngIf="nascimento?.errors?.['required']"
+            mensagem="O campo de Data Nascimento é obrigatório"></app-mensagem>
+          <app-mensagem *ngIf="nascimento?.errors?.['maiorIdadeValidator']"
+            mensagem="Necessário ser maior de 18 anos"></app-mensagem>
         </div>
       </div>
       <div class="formulario__campo">
@@ -26,8 +30,10 @@
         <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita" ngModel
           required pattern="(\(?\d{2}\)?\s?)(\d{5}\-?\d{4})" #contato="ngModel" />
         <div *ngIf="(contato?.invalid && contato?.touched) || contato?.dirty">
-          <app-mensagem>*ngIf="contato?.errors?.['required'] mensagem="O campo de contato é obrigatório"</app-mensagem>
-          <app-mensagem>*ngIf="contato?.errors?.['pattern'] mensagem="O contato está em formato inválido"</app-mensagem>
+          <app-mensagem *ngIf="contato?.errors?.['required']"
+            mensagem="O campo de contato é obrigatório"></app-mensagem>
+          <app-mensagem *ngIf="contato?.errors?.['pattern']"
+            mensagem="O contato está em formato inválido"></app-mensagem>
         </div>
       </div>
     </div>
@@ -36,8 +42,8 @@
       <input name="email" id="email" type="email" class="campo__escrita" ngModel required
         pattern="^[\w-.]+@([\w-]+\.)+[\w-]{2,4}$" #email="ngModel" />
       <div *ngIf="(email?.invalid && email?.touched) || email?.dirty">
-        <app-mensagem>*ngIf="email?.errors?.['required'] mensagem="O campo de email é obrigatório"</app-mensagem>
-        <app-mensagem>*ngIf="email?.errors?.['pattern'] mensagem="O email está em formato inválido"</app-mensagem>
+        <app-mensagem *ngIf="email?.errors?.['required']" mensagem="O campo de email é obrigatório"></app-mensagem>
+        <app-mensagem *ngIf="email?.errors?.['pattern']" mensagem="O email está em formato inválido"></app-mensagem>
       </div>
     </div>
 
