--- a/forms-angular-main/src/app/cadastro/cadastro.component.html
+++ b/forms-angular-main/src/app/cadastro/cadastro.component.html
@@ -53,7 +53,7 @@
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="cep">CEP</label>
       <input name="cep" id="cep" class="campo__escrita" ngModel required pattern="^(\d{5})(-?\d{3})$" minlength="8"
-        maxlength="9" #cep="ngModel" />
+        maxlength="9" (blur)="consultaCep($event)" #cep="ngModel" />
       <div *ngIf="(cep?.invalid && cep?.touched) || cep?.dirty">
         <app-mensagem *ngIf="cep?.errors?.['required']" mensagem="O campo de CEP é obrigatório"></app-mensagem>
         <app-mensagem *ngIf="cep?.errors?.['pattern']"
